--- a/src/static/typedoc/layouts/default.hbs
+++ b/src/static/typedoc/layouts/default.hbs
@@ -7,8 +7,8 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="/content.js"></script>
-    <link rel="stylesheet" href="/static/content.css">
-    <link rel="stylesheet" href="/static/hint.css">
+    <link rel="stylesheet" href="/static/themes/default/content.css">
+    <link rel="stylesheet" href="/static/themes/default/hint.css">
     <link rel="stylesheet" href="/static/typedoc/assets/css/main.css">
 </head>
 <body>
